[tool.poetry]
name = "torwal"
version = "0.1.0"
description = ""
authors = ["Torvald Lekvam <117844+torvald@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
